--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Peak Test</string>
 
-    <string name="undo">undo</string>
+    <string name="undo">Undo</string>
+    <string name="delete">Delete</string>
     <string name="stats">Stats</string>
 
     <!--Stats Activity-->
